force-app/main/default/objects/Liability_Payment__c/Liability_Payment__c.object-meta.xml
<CustomObject>
    <description>DIR BOFE Payments against Liabilities.</description>
    <label>Liability Payment</label>
    <nameField>
        <displayFormat>LP-{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>Liability Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Liability Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>