force-app/main/default/objects/Liability_Payment__c/fields/Authorized_By__c.field-meta.xml
<CustomField>
    <fullName>Authorized_By__c</fullName>
    <description>The allocation of the payment was authorized by this person.</description>
    <formula>CreatedBy.FirstName &amp;&quot; &quot;&amp;  CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The allocation of the payment was authorized by this person.</inlineHelpText>
    <label>Authorized By</label>
    <type>Text</type>
</CustomField>