force-app/main/default/objects/Liability_Payment__c/fields/Case_Violation__c.field-meta.xml
<CustomField>
    <fullName>Case_Violation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Violation</label>
    <referenceTo>DIR_Violation__c</referenceTo>
    <relationshipLabel>Liability Payments</relationshipLabel>
    <relationshipName>Liability_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>