force-app/main/default/objects/Liability_Payment__c/fields/Citation_Type__c.field-meta.xml
<CustomField>
    <fullName>Citation_Type__c</fullName>
    <description>Need for Report, on Case with Case Payment and Liability Payment</description>
    <formula>TEXT(Case_Violation__r.Citation_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Citation Type</label>
    <type>Text</type>
</CustomField>