force-app/main/default/objects/Liability_Payment__c/fields/Hearing_Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Notice_Date__c</fullName>
    <description>F0264</description>
    <label>Hearing Notice Date</label>
    <type>Date</type>
</CustomField>