force-app/main/default/objects/Liability_Payment__c/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <description>Identifier from legacy system record is imported from.</description>
    <externalId>true</externalId>
    <label>Legacy ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>