force-app/main/default/objects/Liability_Payment__c/fields/Liability__c.field-meta.xml
<CustomField>
    <fullName>Liability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Liability</label>
    <referenceTo>Liability__c</referenceTo>
    <relationshipLabel>Liability Payments</relationshipLabel>
    <relationshipName>Liability_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>