force-app/main/default/objects/Liability_Payment__c/fields/Man_Cit_Date_from_Liability__c.field-meta.xml
<CustomField>
    <fullName>Man_Cit_Date_from_Liability__c</fullName>
    <formula>Liability__r.Manual_Citation_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Man Cit Date from Liability</label>
    <type>Date</type>
</CustomField>