force-app/main/default/objects/Liability_Payment__c/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <inlineHelpText>Amount actually posted from the Case Payment to this payment type.</inlineHelpText>
    <label>Payment Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>