force-app/main/default/objects/Liability_Payment__c/fields/Payment_Applied_To__c.field-meta.xml
<CustomField>
    <fullName>Payment_Applied_To__c</fullName>
    <description>F0263</description>
    <label>Payment Applied To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wages</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Penalties</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>