force-app/main/default/objects/Liability_Payment__c/fields/Payment_on_Behalf_of__c.field-meta.xml
<CustomField>
    <fullName>Payment_on_Behalf_of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When saving a payment through the payment system, this is the party that the payment is on behalf of, if this applies. This rolls into the payments on the liable parties to reduce the balance due by the party.</description>
    <inlineHelpText>Party on whose behalf the payment was made.</inlineHelpText>
    <label>Payment on Behalf of</label>
    <referenceTo>Liable_Party__c</referenceTo>
    <relationshipLabel>Payments Received</relationshipLabel>
    <relationshipName>Liability_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>