force-app/main/default/objects/Liability_Payment__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <inlineHelpText>Accounts Payable (To Employees)
Accounts Receivable (From Employers)</inlineHelpText>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounts Payable</fullName>
            </value>
            <value>
                <fullName>Accounts Receivable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>