force-app/main/default/objects/Liability_Payment__c/fields/Payor__c.field-meta.xml
<CustomField>
    <fullName>Payor__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Case_Payment__r.Receipt__r.Payor__r.Id, IF(ISBLANK(Case_Payment__r.Receipt__r.Payor__r.Name), Case_Payment__r.Receipt__r.Payor__r.FirstName &amp; &quot; &quot; &amp; Case_Payment__r.Receipt__r.Payor__r.LastName, Case_Payment__r.Receipt__r.Payor__r.Name))</formula>
    <label>Payor</label>
    <type>Text</type>
</CustomField>