force-app/main/default/objects/Liability_Payment__c/fields/Recommended_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Allocation__c</fullName>
    <description>Allows a recommended allocation amount to be specified without affecting the actual payment on the case</description>
    <inlineHelpText>Amount recommended that should be posted from the Case Payment to this payment type.</inlineHelpText>
    <label>Recommended Allocation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>