force-app/main/default/objects/Liability_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Payment_Amount__c</columns>
    <columns>Case_Payment__c</columns>
    <columns>Case_Violation__c</columns>
    <columns>Payment_Applied_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>